fix minor spacing issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,15 +109,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
 }
 
-.table-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 1rem;
-  box-sizing: border-box;
-}
-
 table {
   width: 600px;
   margin-top: 20px;
